--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "super-quiz-apppppppp",
-  "homepage": "https://Ash-122.github.io/test1",
+  "homepage": "https://Ash-122.github.io/quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
