--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "npm run proxy && gh-pages -d build",
     "proxy": "node src/ProxyServer.js"
   },
   "eslintConfig": {
